--- a/🧠 Brain Tumor Classification with CNN.ipynb
+++ b/🧠 Brain Tumor Classification with CNN.ipynb
@@ -144,8 +144,8 @@
     "        test_img.append(cv2.resize(cv2.imread(path_test+i+'/'+j), (img_size,img_size))) \n",
     "        test_labels_not_encoded.append(i)\n",
     "        \n",
-    "train_img = np.array(train_img)#!! train_img = (np.array(train_img))\n",
-    "test_img = np.array(test_img)#!! test_img = (np.array(test_img))"
+    "train_img = np.array(train_img)",
+    "test_img = np.array(test_img)"
    ]
   },
   {
