--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-
+<img
+  src="/path/to/img.jpg"
+  alt="Alt text"
+  title="Optional title"
+  style="display: inline-block; margin: 0 auto; max-width: 300px">
+![My Image](/imgs/1.PNG)
