--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 <img
-  src="/path/to/img.jpg"
+  src="https://github.com/abdullahkavakli/Brain-Tumor-Classification-with-CNN/blob/main/imgs/1.PNG"
   alt="Alt text"
   title="Optional title"
   style="display: inline-block; margin: 0 auto; max-width: 300px">
