--- a/README
+++ b/README
@@ -1,6 +1,3 @@
 <img
-  src="https://github.com/abdullahkavakli/Brain-Tumor-Classification-with-CNN/blob/main/imgs/1.PNG"
-  alt="Alt text"
-  title="Optional title"
-  style="display: inline-block; margin: 0 auto; max-width: 300px">
+  src="https://github.com/abdullahkavakli/Brain-Tumor-Classification-with-CNN/blob/main/imgs/1.PNG">
 ![My Image](/imgs/1.PNG)
