--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 <img
-  src="https://github.com/abdullahkavakli/Brain-Tumor-Classification-with-CNN/blob/main/imgs/1.PNG">
-![My Image](/imgs/1.PNG)
-![Açıklama](https://github.com/abdullahkavakli/Brain-Tumor-Classification-with-CNN/blob/main/imgs/1.PNG)
+  src="https://github.com/abdullahkavakli/Brain-Tumor-Classification-with-CNN/blob/main/imgs/1.jpg">
+![My Image](/imgs/1.jpg)
+![Açıklama](https://github.com/abdullahkavakli/Brain-Tumor-Classification-with-CNN/blob/main/imgs/1.jpg)
