--- a/README
+++ b/README
@@ -3,3 +3,6 @@
 ![2](https://user-images.githubusercontent.com/72142708/226462869-13bf8ff9-950c-44fe-bbce-e44d951c13a8.jpg)
 ![3](https://user-images.githubusercontent.com/72142708/226462889-d6f08c88-ea4a-465b-b782-1bd350edb75c.jpg)
 ![4](https://user-images.githubusercontent.com/72142708/226462897-bc9b32de-0798-4c07-932d-51b3bb3f5128.jpg)
+
+![tumors](Brain-Tumor-Classification-with-CNN/imgs/1.PNG)
+
