--- a/README
+++ b/README
@@ -6,3 +6,4 @@
 
 ![tumors](Brain-Tumor-Classification-with-CNN/imgs/1.PNG)
 
+![tumors](https://github.com/abdullahkavakli/Brain-Tumor-Classification-with-CNN/blob/main/imgs/1.PNG)
