--- a/README
+++ b/README
@@ -6,5 +6,5 @@
 
 ![tumors](Brain-Tumor-Classification-with-CNN/imgs/1.PNG)
 
-![tumors](https://github.com/abdullahkavakli/Brain-Tumor-Classification-with-CNN/blob/main/imgs/1.PNG)
-![tumors](https://raw.githubusercontent.com/abdullahkavakli/Brain-Tumor-Classification-with-CNN/main/imgs/1.PNG)
+![tumors](https://github.com/abdullahkavakli/Brain-Tumor-Classification-with-CNN/blob/main/imgs/1.jpg)
+![tumors](https://raw.githubusercontent.com/abdullahkavakli/Brain-Tumor-Classification-with-CNN/main/imgs/1.jpg)
