--- a/README
+++ b/README
@@ -8,3 +8,7 @@
 
 ![tumors](https://github.com/abdullahkavakli/Brain-Tumor-Classification-with-CNN/blob/main/imgs/1.jpg)
 ![tumors](https://raw.githubusercontent.com/abdullahkavakli/Brain-Tumor-Classification-with-CNN/main/imgs/1.jpg)
+<p align="center">
+  <img src="https://user-images.githubusercontent.com/72142708/226462869-13bf8ff9-950c-44fe-bbce-e44d951c13a8.jpg" width="350" title="hover text">
+  <img src="https://user-images.githubusercontent.com/72142708/226462869-13bf8ff9-950c-44fe-bbce-e44d951c13a8.jpg" width="350" alt="accessibility text">
+</p>
